fix(root): fix content overlapping page header
fixes some components in preview overlapping the sticky page header on scroll

--- a/src/components/CodePreview/index.css
+++ b/src/components/CodePreview/index.css
@@ -17,6 +17,12 @@
 
 .comp-preview ic-side-navigation {
   height: 43.75rem;
+  z-index: 0;
+}
+
+.comp-preview ic-page-header,
+.comp-preview ic-classification-banner {
+  z-index: 0;
 }
 
 .offscreen {
